--- a/jsjs/user/login.html
+++ b/jsjs/user/login.html
@@ -21,7 +21,7 @@
             --blue: #8DB4D8;
         }
 
-        .login_alert {
+        .login_row {
             border: solid 1px black;
         .
         }
@@ -42,6 +42,7 @@
                 // 입력 폼 유효성 검사
                 const xhr = new XMLHttpRequest();
                 const data = {
+                    // email: textUsername.value + '@' + textDomain.value,
                     email: textUsername.value,
                     password: textPassword.value,
                 };
@@ -66,26 +67,37 @@
 </head>
 <body>
 <div th:replace="fragments/header.html :: fragment-header"></div>
+<!--<div class="alert alert-warning alert-dismissible fade show p-1" role="alert">-->
+<!--    <p class="mb-0 text-center">안녕하세요. 데이터허브입니다.</p>-->
+<!--    <button type="button" class="btn-close p-2" data-bs-dismiss="alert" aria-label="Close"></button>-->
+<!--</div>-->
 <div class="container">
     <div class="row">
-        <div class="col-12 col-lg-4 mx-auto">
-            <div class="alert login_alert" role="alert" style="background-color:var(--white);">
-                <h3 class="text-center"><i class="fas fa-sign-in-alt me-3"></i>로그인</h3>
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5 col-xxl-5 mx-auto">
+            <img src="https://colorlib.com/etc/lf/Login_v15/images/bg-01.jpg" class="card-img-top" alt="...">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5 col-xxl-5 mx-auto">
+                <h3 class="text-center"><i class="fas fa-sign-in-alt me-3 mb-3"></i>로그인</h3>
                 <div class="input-group mb-3">
                     <span class="input-group-text"><i class="far fa-envelope"></i></span>
                     <input type="text" class="form-control" placeholder="이메일"
                            aria-describedby="basic-addon1" id="text-username">
                 </div>
                 <div class="input-group mb-3">
-                    <span class="input-group-text" id="text-password"><i class="fas fa-key"></i></span>
+                    <span class="input-group-text"><i class="fas fa-key"></i></span>
                     <input type="password" class="form-control" placeholder="비밀번호"
-                           aria-describedby="basic-addon1">
+                           aria-describedby="basic-addon1" id="text-password">
                 </div>
-                <div class="d-grid gap-2">
+                <div class="d-grid gap-2 mb-3">
                     <button type="button" class="btn login_btn" id="btn-login">ENTER</button>
                 </div>
+                <div class="d-grid justify-content-center">
+                    <a href="#" class="link-primary mx-auto">회원이 아닙니까?</a>
+                    <a href="#" class="link-primary mx-auto">아이디/비밀번호찾기</a>
+                </div>
             </div>
-
         </div>
     </div>
 </div>
