--- a/jsjs/user/signin.html
+++ b/jsjs/user/signin.html
@@ -80,7 +80,7 @@
         <div class="col-12 align-self-center">
             <div class="row">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5 col-xxl-4 mx-auto">
-                    <div class="mt-2 logo_div">
+                    <div class="mt-2 logo_div mb-5">
                         <a href="/">
                             <div class="mx-auto" id="logo" style="width: 230px; height: 55px; cursor: pointer;">
                             </div>
@@ -100,7 +100,7 @@
                         <button type="button" class="btn login_btn" id="btn-login">ENTER</button>
                     </div>
                     <hr>
-                    <div class="d-grid justify-content-center">
+                    <div class="d-grid justify-content-center mb-5">
                         <ul class="nav">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">회원가입</a>
