--- a/jsjs/user/signin.html
+++ b/jsjs/user/signin.html
@@ -69,7 +69,7 @@
             });
         };
     </script>
-    <script src="../js/signin.js"></script>
+    <script src="../js/javascript/signin.js"></script>
 
 </head>
 <body>
