--- a/jsjs/user/signup.html
+++ b/jsjs/user/signup.html
@@ -36,7 +36,7 @@
             margin-bottom: 200px;
         }
     </style>
-    <script src="../js/signup.js"></script>
+    <script src="../js/javascript/signup.js"></script>
 </head>
 <body>
 <div th:replace="fragments/header.html :: fragment-header"></div>
