--- a/jsjs/usecase/post.html
+++ b/jsjs/usecase/post.html
@@ -15,7 +15,7 @@
     <!--    font awesome-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <script src="../js/post.js"></script>
+    <script src="../js/javascript/post.js"></script>
 </head>
 <body>
 <!--헤더부분-->
