--- a/BU/DataHub.html
+++ b/BU/DataHub.html
@@ -6,15 +6,20 @@
     <title>데이터 허브</title>
 
 
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--    BootStrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
     <!--    font awesome-->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('.responsive').slick({
                 dots: true,
                 prevArrow: $('.prev'),
@@ -43,6 +48,10 @@
             text-decoration: none;
             color: inherit;
         }
+
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 
 
@@ -54,19 +63,19 @@
         <div class="row">
             <div class="col-10 mx-auto">
                 <div class="search mb-5 d-flex justify-content-end">
-                    <input type="text" id="keyword" class="form-control w-25 me-2" title="검색어를 입력해주세요" placeholder="검색어를 입력해주세요" autocomplete="off">
-                    <a href="#" class="fas fa-search fa-2x text-primary align-self-center"></a>
+                    <input type="text" id="keyword" class="form-control w-25 me-2" title="검색어를 입력해주세요"
+                        placeholder="검색어를 입력해주세요" autocomplete="off">
+                    <button type="button" class="btn btn-primary" id="btn-search"><i class="fas fa-search"></i></button>
                 </div>
             </div>
         </div>
-        <div class="row mx-auto">
-            <div class="col-10 mx-auto">
-               <strong class="ms-3">인기 데이터 HUB</strong>
+        <div class="col-10 row mx-auto">
+            <div class="col-8 mx-auto">
+                <h5 class="ms-3">인기 데이터 HUB</h5>
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active d-flex">
                             <img src="image/1.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
-
                             <img src="image/1.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
                             <img src="image/1.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
                         </div>
@@ -81,15 +90,29 @@
                             <img src="image/3.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                        data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
+                        <span class="visually-hidden"></span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                        data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
+                        <span class="visually-hidden"></span>
                     </button>
                 </div>
+            </div>
+            <div class="col-4 mx-auto">
+                <h5 class="ms-3">추천 글</h5>
+                <ul>
+                    <li class="mx-3 my-3"><a href="#">오늘의 데이터, 추천 데이터, 호이호이</a></li>
+                    <li class="mx-3 my-3"><a href="#">오늘의 데이터</a></li>
+                    <li class="mx-3 my-3"><a href="#">오늘의 데이터</a></li>
+                    <li class="mx-3 my-3"><a href="#">오늘의 데이터</a></li>
+                    <li class="mx-3 my-3"><a href="#">오늘의 데이터</a></li>
+                    <li class="mx-3 my-3"><a href="#">오늘의 데이터</a></li>
+                    <li class="mx-3 my-3"><a href="#">오늘의 데이터</a></li>
+                </ul>
             </div>
         </div>
         <div class="row mt-5">
@@ -150,7 +173,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-center mb-5">
                         <ul class="d-flex">
                             <li class="m-3">
                                 <a href="#" class="border d-flex rounded-3 p-3">
@@ -205,5 +228,44 @@
                 </div>
             </div>
         </div>
+        <div class="col-12 d-flex justify-content-center">
+            <div id="carouselExampleControlsNoTouching" class="carousel slide col-12" data-bs-touch="false"
+                data-bs-interval="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <button type="button" class="mx-3"><i class="fas fa-school fa-4x"></i></button>
+                        <button type="button" class="mx-3"><i class="fas fa-industry fa-4x"></i></button>
+                        <button type="button" class="mx-3"><i class="fas fa-hands-helping fa-4x"></i></button>
+                        <button type="button" class="mx-3"><i class="fas fa-medkit fa-4x"></i></button>
+                        <button type="button" class="mx-3"><i class="fas fa-plane-departure fa-4x"></i></button>
+                    </div>
+                    <div class="carousel-item">
+                        <button type="button" class="mx-3"><i class="fas fa-city fa-4x"></i></button>
+                        <button type="button" class="mx-3"><i class="fas fa-car-side fa-4x"></i></button>
+                        <button type="button" class="mx-3"><i class="fas fa-leaf fa-4x"></i></button>
+                        <button type="button" class="mx-3"><i class="fas fa-flask fa-4x"></i></button>
+                        <button type="button" class="mx-3"><i class="fas fa-gavel fa-4x"></i></button>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden"></span>
+                </button>
+            </div>
+            <div class="d-flex justify-content-center">
+
+            </div>
+            <div class="d-flex justify-content-center">
+
+            </div>
+        </div>
     </div>
-</body></html>
+</body>
+
+</html>
