fix: 데이터 허브 상세 조회 - 추가 수정

--- a/hyeonjeong/datahub/view.html
+++ b/hyeonjeong/datahub/view.html
@@ -45,7 +45,7 @@
                 <!-- datahub-view-page-big-title -->
                 <h2>데이터 허브 상세 조회</h2>
 
-                <!-- datahub-view-page- -->
+                <!-- datahub-view-page-data-name -->
                 <div class="col-12 mt-3 fs-5"><i class="fas fa-arrow-alt-circle-right"></i>대구광역시 남구 편의점 분포현황</div>
 
                 <!-- datahub-view-result-info -->
@@ -85,7 +85,7 @@
                     </div>
                 </div>
 
-                <!-- API-view-API-backbutt -->
+                <!-- datahub-view-btn -->
                 <div class="d-flex justify-content-end mt-2">
                     <button type="button" class="btn btn-dark">목록</button>
                 </div>
