fix: 데이터 허브 상세 조회 - 파일 용량 UI 추가

--- a/hyeonjeong/datahub/view.html
+++ b/hyeonjeong/datahub/view.html
@@ -82,6 +82,7 @@
                         데이터 파일</div>
                     <div class="col-8 col-md-10 py-3 border-top border-bottom">
                         <button type="button" class="btn btn-dark btn-sm">다운로드</button>
+                        <span>[99999KB]</span>
                     </div>
                 </div>
 
