수정하는중

--- a/BU/DataHub.html
+++ b/BU/DataHub.html
@@ -69,25 +69,25 @@
                 </div>
             </div>
         </div>
-        <div class="col-10 row mx-auto">
-            <div class="col-8 mx-auto">
+        <div class="col-lg-10 row mx-auto">
+            <div class="col-7 mx-auto">
                 <h5 class="ms-3">인기 데이터 HUB</h5>
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active d-flex">
-                            <img src="image/1.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
-                            <img src="image/1.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
-                            <img src="image/1.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
+                            <img src="image/1.PNG" class="d-block w-100 m-3" alt="...">
+                            <img src="image/1.PNG" class="d-block w-100 m-3" alt="...">
+                            <img src="image/1.PNG" class="d-block w-100 m-3" alt="...">
                         </div>
                         <div class="carousel-item d-flex">
-                            <img src="image/2.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
-                            <img src="image/2.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
-                            <img src="image/2.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
+                            <img src="image/2.PNG" class="d-block w-100 m-3" alt="...">
+                            <img src="image/2.PNG" class="d-block w-100 m-3" alt="...">
+                            <img src="image/2.PNG" class="d-block w-100 m-3" alt="...">
                         </div>
                         <div class="carousel-item d-flex">
-                            <img src="image/3.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
-                            <img src="image/3.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
-                            <img src="image/3.PNG" class="d-block w-100 m-3" alt="..." style="height: 250px;">
+                            <img src="image/3.PNG" class="d-block w-100 m-3" alt="...">
+                            <img src="image/3.PNG" class="d-block w-100 m-3" alt="...">
+                            <img src="image/3.PNG" class="d-block w-100 m-3" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -102,7 +102,7 @@
                     </button>
                 </div>
             </div>
-            <div class="col-4 mx-auto">
+            <div class="col-lg-4 mx-auto">
                 <h5 class="ms-3">추천 글</h5>
                 <ul>
                     <li class="mx-3 my-3"><a href="#">오늘의 데이터, 추천 데이터, 호이호이</a></li>
@@ -110,18 +110,16 @@
                     <li class="mx-3 my-3"><a href="#">오늘의 데이터</a></li>
                     <li class="mx-3 my-3"><a href="#">오늘의 데이터</a></li>
                     <li class="mx-3 my-3"><a href="#">오늘의 데이터</a></li>
-                    <li class="mx-3 my-3"><a href="#">오늘의 데이터</a></li>
-                    <li class="mx-3 my-3"><a href="#">오늘의 데이터</a></li>
                 </ul>
             </div>
         </div>
-        <div class="row mt-5">
-            <div class="col-10 mx-auto">
-                <div class="col-12 d-flex justify-content-center">
+        <div class="row">
+            <div class="col-lg-12 mx-auto ms-1">
+                <div class="col-lg-12 d-flex justify-content-center">
                     <span>추천 데이터 HUB</span>
                 </div>
-                <div class="col-12">
-                    <div class="d-flex justify-content-center">
+                <div class="col-lg-12">
+                    <div class="col-12 d-flex justify-content-center">
                         <ul class="d-flex">
                             <li class="m-3">
                                 <a href="#" class="border d-flex rounded-3 p-3">
@@ -173,7 +171,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="d-flex justify-content-center mb-5">
+                    <div class="col-lg-12 d-flex justify-content-center mb-5">
                         <ul class="d-flex">
                             <li class="m-3">
                                 <a href="#" class="border d-flex rounded-3 p-3">
@@ -228,6 +226,7 @@
                 </div>
             </div>
         </div>
+<!--
         <div class="col-12 d-flex justify-content-center">
             <div id="carouselExampleControlsNoTouching" class="carousel slide col-12" data-bs-touch="false"
                 data-bs-interval="false">
@@ -265,6 +264,7 @@
 
             </div>
         </div>
+-->
     </div>
 </body>
 
