--- a/BU/DataHub.html
+++ b/BU/DataHub.html
@@ -62,9 +62,15 @@
     <div class="container mx-auto">
         <div class="row">
             <div class="col-10 mx-auto">
-                <div class="search mb-5 d-flex justify-content-end">
-                    <input type="text" id="keyword" class="form-control w-25 me-2" title="검색어를 입력해주세요"
-                        placeholder="검색어를 입력해주세요" autocomplete="off">
+                <!-- <div class="col-lg-10 d-flex">
+                    <a href="#">Data-Hub</a>
+                    <a href="#">Hub 랭킹</a>
+                    <a href="#">주제별</a>  
+                    <a href="#">내 Hub</a>                    
+                </div> -->
+                <div class="col-12 search mb-5 d-flex justify-content-end">
+                    <input type="text" id="keyword" class="form-control w-25 me-2" title="검색어를 입력하세요"
+                        placeholder="검색어를 입력하세요" autocomplete="off">
                     <button type="button" class="btn btn-primary" id="btn-search"><i class="fas fa-search"></i></button>
                 </div>
             </div>
