--- a/BU/mmmmm.html
+++ b/BU/mmmmm.html
@@ -62,8 +62,8 @@
     <div class="container">
         <div class="row">
             <div class="col-10 mx-auto">
-                <div class="">
-                    <div class="">
+                <div class="row">
+                    <div class="col-10 mx-auto">
                         <!-- <div class="col-lg-10 d-flex">
                     <a href="#">Data-Hub</a>
                     <a href="#">Hub 랭킹</a>
@@ -78,8 +78,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 d-flex">
-                    <div class="col-8">
+                <div class="col-lg-10 row mx-auto">
+                    <div class="mx-auto">
                         <h5 class="ms-3">인기 데이터 HUB</h5>
                         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                             <div class="carousel-inner">
@@ -111,7 +111,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 mx-auto">
                         <h5 class="ms-3">추천 글</h5>
                         <ul>
                             <li class="mx-3 my-3"><a href="#">오늘의 데이터, 추천 데이터, 호이호이</a></li>
@@ -122,13 +122,13 @@
                         </ul>
                     </div>
                 </div>
-                <div class="">
-                    <div class="">
-                        <div class="">
+                <div class="row">
+                    <div class="col-lg-12 mx-auto ms-1">
+                        <div class="col-lg-12 d-flex justify-content-center">
                             <span>추천 데이터 HUB</span>
                         </div>
-                        <div class="">
-                            <div class="">
+                        <div class="col-lg-12">
+                            <div class="col-12 d-flex justify-content-center">
                                 <ul class="d-flex">
                                     <li class="m-3">
                                         <a href="#" class="border d-flex rounded-3 p-3">
@@ -180,7 +180,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="">
+                            <div class="col-lg-12 d-flex justify-content-center mb-5">
                                 <ul class="d-flex">
                                     <li class="m-3">
                                         <a href="#" class="border d-flex rounded-3 p-3">
