하단 button 통일감 있게 수정

--- a/jsjs/user/signup.html
+++ b/jsjs/user/signup.html
@@ -70,10 +70,23 @@
                         <input type="password" class="form-control" placeholder="비밀번호 확인"
                                aria-describedby="basic-addon1" id="pw02">
                     </div>
-                    <hr>
                     <div class="d-grid gap-2 mb-3">
                         <button type="button" class="btn login_btn" id="btn-login" onclick="validate();">REGISTER
                         </button>
+                    </div>
+                    <hr>
+                    <div class="d-grid justify-content-center mb-5">
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">로그인</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">아이디 찾기</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">비밀번호 찾기</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
