--- a/BU/datahub_list.html
+++ b/BU/datahub_list.html
@@ -46,7 +46,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-10 mx-auto">
+            <div class="col-12 mx-auto">
                 <div class="row mb-5">
                     <div class="col-lg-12">
                         <div class="search d-flex">
@@ -108,8 +108,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12 d-flex">
-                        <div class="col-lg-8">
+                    <div class="col-lg-12 d-flex justify-content-between">
+                        <div class="col-lg-7">
                             <span>
                                 <h3>주제</h3>
                             </span>
@@ -159,7 +159,7 @@
                                 </div>
                             </div>
 
-                            <ul class="d-flex justify-content-between mb-3">
+                            <ul class="d-flex justify-content-between mb-4">
                                 <li class="">
                                     <a href="#" class="d-flex">
                                         <div class="d-flex align-items-center">
@@ -231,17 +231,25 @@
                             </ul>
 
                         </div>
-                        <div class="col-lg-4">
-                            <div class="mb-5">
+                        <div class="col-lg-4 border border-2 rounded-3">
+                            <div class="mb-2">
                                 <span>
                                     <h3>랭킹</h3>
                                 </span>
                             </div>
-                            <div class="">
-                                <a href="#">1. adfasdf</a>
-                                <a href="#">2. asdasdas</a>
-                                <a href="#">3. adasdasd</a>
-                                <a href="#">4. asd,cx,</a>
+                            <div class="fs-5">
+                                <ul>
+                                    <li class="mb-1"><a href="#">1. asdfsadf</a></li>
+                                    <li class="mb-1"><a href="#">1. asdfsadf</a></li>
+                                    <li class="mb-1"><a href="#">1. asdfsadf</a></li>
+                                    <li class="mb-1"><a href="#">1. asdfsadf</a></li>
+                                    <li class="mb-1"><a href="#">1. asdfsadf</a></li>
+                                    <li class="mb-1"><a href="#">1. asdfsadf</a></li>
+                                    <li class="mb-1"><a href="#">1. asdfsadf</a></li>
+                                    <li class="mb-1"><a href="#">1. asdfsadf</a></li>
+                                    <li class="mb-1"><a href="#">1. asdfsadf</a></li>
+                                    <li class=""><a href="#">1. asdfsadf</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
